[metadata]
name = djpykafka
version = 0.0.43
author = Manuel Stingl
author_email = info+opensource@voltane.eu
description = Django + Pydantic + Kafka
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Framework :: Django
    Topic :: Utilities
    # Development Status :: 5 - Production/Stable
url = https://github.com/Voltane-EU/djpykafka

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    djdantic >= 0.0.6
    kafka-python
    djutils
extras_requires =
    docs = asyncapi-docgen
